--- a/apache_server/Dockerfile
+++ b/apache_server/Dockerfile
@@ -2,6 +2,5 @@
 FROM httpd:2.4-alpine
 
 #COPY ./fpm-httpd.conf /usr/local/apache2/conf/fpm-httpd.conf
-#COPY ./fpm-httpd.conf /usr/local/apache2/conf/fpm-httpd.conf
-#COPY demo.apache.conf /usr/local/apache2/conf/demo.apache.conf
-RUN echo "Include /usr/local/apache2/conf/fpm-httpd.conf" >> /usr/local/apache2/conf/httpd.conf
+COPY ./etender-httpd.conf /usr/local/apache2/conf/etender-httpd.conf
+RUN echo "Include /usr/local/apache2/conf/etender-httpd.conf" >> /usr/local/apache2/conf/httpd.conf
